samples/_failures_safe/1761314164_525385_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f4e88f0.c: In function ‘main’:
./samples/SAFE/__tmp_5f4e88f0.c:149:56: error: expected ‘]’ at end of input
  149 |             printf("%-20s %d\n", words[i].word, words[i
      |                                                        ^
      |                                                        ]
./samples/SAFE/__tmp_5f4e88f0.c:149:13: error: expected declaration or statement at end of input
  149 |             printf("%-20s %d\n", words[i].word, words[i
      |             ^~~~~~
./samples/SAFE/__tmp_5f4e88f0.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f4e88f0.c:149:13: error: expected declaration or statement at end of input
